--- a/HotelSolution/Frontend/HotelApp.WebUI/HotelApp.WebUI.csproj
+++ b/HotelSolution/Frontend/HotelApp.WebUI/HotelApp.WebUI.csproj
@@ -23,6 +23,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.12" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
+        <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     </ItemGroup>
 
     <ItemGroup>
